hero section layout adjustment

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block hero %}
 
+<div class="hero-part">
     <div class="landing-text-box">
-        <p class="hero-line-title">Welcome to Culinary World</p>
-        <p class="hero-line-subtitle">Best Recipes in one place</p> 
+        <p class="hero-line-title">Welcome to Culinary World! </p>
+        <p class="hero-line-subtitle">Your best recipes in one place</p>
     </div>
+</div>
 
 {% endblock %}
 {% block content %}
