input field attributes added

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -11,11 +11,11 @@
                 <label for="username">Username</label>
             </div><!-- // input-field -->
             <div class="input-field col s12">
-                <input id="email" name="email" type="email" class="validate" required>
+                <input id="email" name="email" type="email" class="validate" required required maxlength="40">
                 <label for="email">Email</label>
             </div><!-- // input-field -->
             <div class="input-field col s12">
-                <input type="password" id="pass" name="pass" class="validate" required>
+                <input type="password" id="pass" name="pass" class="validate" required min="5">
                 <label for="pass">Password</label>
             </div><!-- // input-field -->
             <div class="row">
