--- a/templates/registration.html
+++ b/templates/registration.html
@@ -15,7 +15,7 @@
                 <label for="email">Email</label>
             </div><!-- // input-field -->
             <div class="input-field col s12">
-                <input type="password" id="pass" name="pass" class="validate" required min="5">
+                <input type="password" id="pass" name="pass" class="validate" required>
                 <label for="pass">Password</label>
             </div><!-- // input-field -->
             <div class="row">
