--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block hero %}
 
+<!-- hero section -->
 <div class="hero-part">
     <div class="landing-text-box">
         <p class="hero-line-title">Welcome to Culinary World! </p>
@@ -11,6 +12,18 @@
 {% endblock %}
 {% block content %}
 
+<!-- flash message -->
+<div class="row">
+    <div class="col s12">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        {% for message in messages %}
+        <h6 class="alert">{{ message }}</h6>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+    </div>
+</div>
 <!-- search-bar -->
 <div class="row">
     <div class="col s12">
@@ -59,7 +72,7 @@
 {% block footer %}
 
 <footer>
-    <p>Culinary World &copy; 2020</p>
+    <p>Culinary World &copy; Code Institute 2020</p>
 </footer>
 
 {% endblock %}
