--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="input-field col s12 m6">
                         <i class="material-icons prefix">create</i>
-                        <input id="recipe_name" name="recipe_name" type="text" class="validate" maxlength="40">
+                        <input id="recipe_name" name="recipe_name" type="text" class="validate" required maxlength="40">
                         <label for="recipe_name">Recipe Name</label>
                     </div>
 
@@ -38,17 +38,17 @@
 
                     <div class="input-field col s12 m6">
                         <i class="material-icons prefix">people</i>
-                        <input id="serves" name="serves" type="number" class="validate" min="1">
+                        <input id="serves" name="serves" type="number" required class="validate" min="1">
                         <label for="serves">Serves</label>
                     </div>
                     <div class="input-field col s12 m6">
                         <i class="material-icons prefix">access_time</i>
-                        <input id="prep_time" name="prep_time" type="text" class="validate" maxlength=10>
+                        <input id="prep_time" name="prep_time" type="text" required class="validate" maxlength=10>
                         <label for="prep_time">Preparation Time</label>
                     </div>
                     <div class="input-field col s12 m6">
                         <i class="material-icons prefix">person</i>
-                        <input id="author" name="author" type="text" class="validate" maxlength="30">
+                        <input id="author" name="author" type="text" requiredclass="validate" maxlength="30">
                         <label for="author">Author</label>
                     </div>
                     <div class="input-field col s12 m6">
@@ -83,7 +83,7 @@
                     <div class="input-field col s12">
                         <i class="material-icons prefix">list</i>
                         <textarea name="method" class="materialize-textarea" placeholder="Add step" required
-                            maxlength="300"></textarea>
+                            maxlength="150"></textarea>
                         <div id="steps">
                             <a class="waves-effect waves-light btn-small add-step margin-r">Add Step</a>
                             <a class="waves-effect waves-light btn-small delete-last-step delete">Delete Last</a>
