--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -108,7 +108,7 @@
 {% block footer %}
 
 <footer>
-    <p>Culinary World &copy; 2020</p>
+    <p>Culinary World &copy; Code Institute 2020</p>
 </footer>
 
 {% endblock %}
