--- a/templates/recipe_details.html
+++ b/templates/recipe_details.html
@@ -102,7 +102,7 @@
 {% block footer %}
 
 <footer>
-    <p>Culinary World &copy; 2020</p>
+    <p>Culinary World &copy; Code Institute 2020</p>
 </footer>
 
 {% endblock %}
