--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -3,127 +3,132 @@
 
 <div class="row">
     <div class="col s12 l10 offset-l1">
-    <h3 class="main-title">Edit Recipe</h3>
-    <form action="{{ url_for('update_recipe', recipe_id=recipes._id) }}" method="POST" class="add-form">
-        <fieldset>
-            <legend>Recipe Details</legend>
-            <div class="row">
-                <div class="input-field col s12 m6">
-                    <i class="material-icons prefix">create</i>
-                    <input id="recipe_name" name="recipe_name" type="text" class="validate" maxlength="40"
-                        value="{{ recipes.recipe_name }}" required>
-                    <label for="recipe_name">Recipe Name</label>
-                </div>
+        <h3 class="main-title">Edit Recipe</h3>
+        <form action="{{ url_for('update_recipe', recipe_id=recipes._id) }}" method="POST" class="add-form">
+            <fieldset>
+                <legend>Recipe Details</legend>
+                <div class="row">
+                    <div class="input-field col s12 m6">
+                        <i class="material-icons prefix">create</i>
+                        <input id="recipe_name" name="recipe_name" type="text" class="validate" maxlength="40"
+                            value="{{ recipes.recipe_name }}" required>
+                        <label for="recipe_name">Recipe Name</label>
+                    </div><!-- // input-field -->
 
-                <div class="input-field col s12 m6">
-                    <i class="material-icons prefix">location_on</i>
-                    <select id="category" name="cuisine_name" required>
-                        <option value="" disabled selected>Choose Cuisine</option>
-                        {% for type in cuisine_type %}
-                        {% if type.c_type == recipes.cuisine_name %}
-                        <option value="{{ type.c_type }}" selected>{{ type.c_type }}
-                        </option>
-                        {% else %}
-                        <option value="{{ type.c_type }}">{{ type.c_type }}
-                            {% endif %}
-                            {% endfor %}
-                    </select>
-                </div>
+                    <div class="input-field col s12 m6">
+                        <i class="material-icons prefix">location_on</i>
+                        <select id="category" name="cuisine_name" required>
+                            <option value="" disabled selected>Choose Cuisine</option>
+                            {% for type in cuisine_type %}
+                            {% if type.c_type == recipes.cuisine_name %}
+                            <option value="{{ type.c_type }}" selected>{{ type.c_type }}
+                            </option>
+                            {% else %}
+                            <option value="{{ type.c_type }}">{{ type.c_type }}
+                                {% endif %}
+                                {% endfor %}
+                        </select>
+                    </div><!-- // input-field -->
 
-                <div class="input-field col s12 m6">
-                    <i class="material-icons prefix">restaurant_menu</i>
-                    <select id="type" name="difficulty" required>
-                        <option value="" disabled selected>Choose Difficulty</option>
-                        {% for difficult in levels %}
-                        {% if difficult.d_level == recipes.difficulty %}
-                        <option value="{{ difficult.d_level }}" selected>{{ difficult.d_level }}
-                        </option>
-                        {% else %}
-                        <option value="{{ difficult.d_level }}">{{ difficult.d_level }}
-                        {% endif %}
+                    <div class="input-field col s12 m6">
+                        <i class="material-icons prefix">restaurant_menu</i>
+                        <select id="type" name="difficulty" required>
+                            <option value="" disabled selected>Choose Difficulty</option>
+                            {% for difficult in levels %}
+                            {% if difficult.d_level == recipes.difficulty %}
+                            <option value="{{ difficult.d_level }}" selected>{{ difficult.d_level }}
+                            </option>
+                            {% else %}
+                            <option value="{{ difficult.d_level }}">{{ difficult.d_level }}
+                                {% endif %}
+                                {% endfor %}
+                        </select>
+                    </div><!-- // input-field -->
+
+                    <div class="input-field col s12 m6">
+                        <i class="material-icons prefix">people</i>
+                        <input id="serves" name="serves" type="text" required class="validate"
+                            value="{{ recipes.serves }}">
+                        <label for="serves">Serves</label>
+                    </div><!-- // input-field -->
+                    <div class="input-field col s12 m6">
+                        <i class="material-icons prefix">access_time</i>
+                        <input id="prep_time" name="prep_time" type="text" required class="validate"
+                            value="{{ recipes.prep_time }}">
+                        <label for="prep_time">Preparation Time</label>
+                    </div><!-- // input-field -->
+                    <div class="input-field col s12 m6">
+                        <i class="material-icons prefix">person</i>
+                        <input id="author" name="author" type="text" required class="validate"
+                            value="{{ recipes.author }}">
+                        <label for="author">Author</label>
+                    </div><!-- // input-field -->
+                    <div class="input-field col s12 m6">
+                        <i class="material-icons prefix">add_a_photo</i>
+                        <input id="image_url" name="image_url" type="url" required class="validate"
+                            value="{{recipes.image_url }}">
+                        <label for="image_url">Image URL</label>
+                    </div><!-- // input-field -->
+                    <div class="input-field col s12 m6">
+                        <i class="material-icons prefix">assignment</i>
+                        <textarea id="description" name="description" class="materialize-textarea" required
+                            maxlength="300"> {{ recipes.description }}</textarea>
+                        <label for="description">Description</label>
+                    </div><!-- // input-field -->
+                </div><!-- // row -->
+            </fieldset><!-- // fieldset-->
+            <fieldset>
+                <legend>Ingredients</legend>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">shopping_basket</i>
+                        {% for ingredient in recipes.ingredients %}
+
+                        <input type="text" name="ingredients" required maxlength="60" class="validate"
+                            value=" {{ ingredient }} " required>
                         {% endfor %}
-                    </select>
-                </div>
-
-                <div class="input-field col s12 m6">
-                    <i class="material-icons prefix">people</i>
-                    <input id="serves" name="serves" type="text" required class="validate" value="{{ recipes.serves }}">
-                    <label for="serves">Serves</label>
-                </div>
-                <div class="input-field col s12 m6">
-                    <i class="material-icons prefix">access_time</i>
-                    <input id="prep_time" name="prep_time" type="text" required class="validate" value="{{ recipes.prep_time }}">
-                    <label for="prep_time">Preparation Time</label>
-                </div>
-                <div class="input-field col s12 m6">
-                    <i class="material-icons prefix">person</i>
-                    <input id="author" name="author" type="text" required class="validate" value="{{ recipes.author }}">
-                    <label for="author">Author</label>
-                </div>
-                <div class="input-field col s12 m6">
-                    <i class="material-icons prefix">add_a_photo</i>
-                    <input id="image_url" name="image_url" type="url" required class="validate" value="{{recipes.image_url }}">
-                    <label for="image_url">Image URL</label>
-                </div>
-                <div class="input-field col s12 m6">
-                    <i class="material-icons prefix">assignment</i>
-                    <textarea id="description" name="description"
-                        class="materialize-textarea" required maxlength="300"> {{ recipes.description }}</textarea>
-                    <label for="description">Description</label>
-                </div>
-            </div>
-        </fieldset>
-        <fieldset>
-            <legend>Ingredients</legend>
+                        <div id="items">
+                            <a class="waves-effect waves-light btn-small add-input-field margin-r">Add item</a>
+                            <a class="waves-effect waves-light btn-small delete-last-field delete">Delete Last</a>
+                        </div>
+                    </div><!-- // input-field -->
+                </div><!-- // row -->
+            </fieldset><!-- // fieldset-->
+            <fieldset>
+                <legend>Preparation Steps</legend>
+                <div class="row">
+                    <div class="input-field col s12">
+                        <i class="material-icons prefix">list</i>
+                        {% for step in recipes.method %}
+                        <textarea name="method" class="materialize-textarea" maxlength="150"
+                            required>{{ step }}</textarea>
+                        {% endfor %}
+                        <div id="steps">
+                            <a class="waves-effect waves-light btn-small add-step margin-r">Add item</a>
+                            <a class="waves-effect waves-light btn-small delete-last-step delete">Delete Last</a>
+                        </div>
+                    </div><!-- // input-field -->
+                </div><!-- // row -->
+            </fieldset><!-- // fieldset-->
             <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">shopping_basket</i>
-                    {% for ingredient in recipes.ingredients %}
-                    
-                    <input type="text" name="ingredients" required maxlength="60" class="validate" value=" {{ ingredient }} "
-                        required>
-                    {% endfor %}
-                    <div id="items">    
-                    <a class="waves-effect waves-light btn-small add-input-field margin-r">Add item</a>
-                    <a class="waves-effect waves-light btn-small delete-last-field delete">Delete Last</a>
-                </div>
-            </div>
-            </div>
-        </fieldset>
-        <fieldset>
-            <legend>Preparation Steps</legend>
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">list</i>
-                    {% for step in recipes.method %}
-                    <textarea name="method" class="materialize-textarea" maxlength="150" required>{{ step }}</textarea>
-                    {% endfor %}
-                    <div id="steps">
-                    <a class="waves-effect waves-light btn-small add-step margin-r">Add item</a>
-                    <a class="waves-effect waves-light btn-small delete-last-step delete">Delete Last</a>
-                </div>
-                </div>
-            </div>
-        </fieldset>
-        <div class="row">
-            <div class="col s12">
-                <button class="btn waves-effect waves-light margin-r" type="submit">Update
-                    <i class="material-icons left">playlist_add</i>
-                </button>
-                <a href="{{ url_for('recipe_details', recipe_id=recipe_id ) }}"
-                    class="btn waves-effect waves-light cancel">Cancel
-                    <i class="material-icons left">cancel</i></a>
-            </div>
-        </div>
-    </form>
-</div>
-</div>
+                <div class="col s12">
+                    <button class="btn waves-effect waves-light margin-r" type="submit">Update
+                        <i class="material-icons left">playlist_add</i>
+                    </button>
+                    <a href="{{ url_for('recipe_details', recipe_id=recipe_id ) }}"
+                        class="btn waves-effect waves-light cancel">Cancel
+                        <i class="material-icons left">cancel</i></a>
+                </div><!-- // col -->
+            </div><!-- // row -->
+        </form><!-- // form-->
+    </div><!--// col l10 offset-l1 -->
+</div><!-- // row -->
 
 {% endblock %}
 {% block footer %}
 
 <footer>
-    <p>Culinary World &copy; 2020</p>
+    <p>Culinary World &copy; Code Institute 2020</p>
 </footer>
 
 {% endblock %}
