form fields layout adjustments

--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -80,33 +80,29 @@
             <fieldset>
                 <legend>Ingredients</legend>
                 <div class="row">
-                    <div class="input-field col s12">
+                    <div class="input-field col s12" id="items">
                         <i class="material-icons prefix">shopping_basket</i>
                         {% for ingredient in recipes.ingredients %}
 
-                        <input type="text" name="ingredients" required maxlength="60" class="validate"
+                        <input type="text" name="ingredients" required maxlength="100" class="validate"
                             value=" {{ ingredient }} " required>
                         {% endfor %}
-                        <div id="items">
                             <a class="waves-effect waves-light btn-small add-input-field margin-r">Add item</a>
                             <a class="waves-effect waves-light btn-small delete-last-field delete">Delete Last</a>
-                        </div>
                     </div><!-- // input-field -->
                 </div><!-- // row -->
             </fieldset><!-- // fieldset-->
             <fieldset>
                 <legend>Preparation Steps</legend>
                 <div class="row">
-                    <div class="input-field col s12">
+                    <div class="input-field col s12" id="steps">
                         <i class="material-icons prefix">list</i>
                         {% for step in recipes.method %}
                         <textarea name="method" class="materialize-textarea" maxlength="150"
                             required>{{ step }}</textarea>
                         {% endfor %}
-                        <div id="steps">
                             <a class="waves-effect waves-light btn-small add-step margin-r">Add item</a>
                             <a class="waves-effect waves-light btn-small delete-last-step delete">Delete Last</a>
-                        </div>
                     </div><!-- // input-field -->
                 </div><!-- // row -->
             </fieldset><!-- // fieldset-->
