--- a/templates/results.html
+++ b/templates/results.html
@@ -1,25 +1,54 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block content %}
 
-{% if total == 0 %}
-<!-- If no results display message -->
-<h4>Sorry but there is nothing found when searching for {{ query }}.</h4>
-<div class="col s12">
-    <form action="{{ url_for('find_recipe') }}" method="POST" class="margin">
-        <div class="input-field search-bar">
-            <i class="material-icons prefix">search</i>
-            <input type="text" id="search" name="search" required>
-            <label for="search">Enter search term...</label>
+<!-- search-bar -->
+<div class="row">
+    <div class="col s12">
+        <form action="{{ url_for('find_recipe') }}" method="POST" class="margin">
+            <div class="input-field search-bar">
+                <i class="material-icons prefix">search</i>
+                <input type="text" id="search" name="search" required>
+                <label for="search">Enter search term...</label>
+                <div class="card-action">
+                    <button type="submit" class="btn btn-info">Search </button>
+                    <a href="{{ url_for('all_recipes') }}" class="btn waves-effect waves-light"><i
+                            class="material-icons right">sync</i>Reset</a>
+                </div><!-- // card-action -->
+            </div><!-- // search-bar -->
+        </form><!-- // form -->
+        {% if total == 0 %}
+        <h5>Sorry, no results found for <em>"{{ query }}"</em>.</h5>
+    </div><!-- // col -->
+    {% else %}
+    <h5>{{ total }} result(s) found for <em>"{{ query }}"</em>.</h5>
+    <!-- looping throught recipes collection and display apropriate details -->
+    {% for recipe in recipes %}
+    <div class="col s12 m6 l4">
+        <div class="card">
+            <div class="card-image">
+                <a href="/recipes/{{ recipe._id }}">
+                    <img src="{{ recipe.image_url}}">
+                    <span class="card-title">{{ recipe.recipe_name }}</span>
+                </a>
+            </div><!-- // card-image -->
+            <div class="card-content">
+                <p><i class="material-icons prefix">location_on</i> Cuisine: <span class="bold-text">
+                        {{ recipe.cuisine_name }}</span></p>
+                <p><i class="material-icons prefix">restaurant_menu</i> Difficulty: <span class="bold-text">
+                        {{ recipe.difficulty }}</span></p>
+                <p><i class="material-icons prefix">people</i> Serves: <span class="bold-text">
+                        {{ recipe.serves }}</span></p>
+                <p><i class="material-icons prefix">access_time</i>Time: <span class="bold-text">
+                        {{ recipe.prep_time }}</span></p>
+            </div><!-- // card-content -->
             <div class="card-action">
-                <button type="submit" class="btn btn-info">Search </button>
-                <a href="{{ url_for('all_recipes') }}" class="btn waves-effect waves-light"><i
-                        class="material-icons right">sync</i>Reset</a>
+                <a href="/recipes/{{ recipe._id }}">View Recipe</a>
             </div><!-- // card-action -->
-        </div><!-- // search-bar -->
-    </form><!-- // form -->
-</div><!-- // col -->
-
-{% endif %}
+        </div><!-- // card -->
+    </div><!-- // col-->
+    {% endfor %}
+    {% endif %}
+</div><!-- // row -->
 {% endblock %}
 {% block footer %}
 
