--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,6 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
 
+
+<!-- flash message -->
+<div class="row">
+    <div class="col s12">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        {% for message in messages %}
+        <h6 class="alert">{{ message }}</h6>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+    </div>
+</div>
+
 <!-- registration form -->
 <div class="row center-form">
     <div class="col s12 m8 offset-m2 l4 offset-l4">
@@ -21,6 +35,11 @@
             <div class="row">
                 <div class="col s12">
                     <button class="btn waves-effect waves-light login-btn-align" type="submit">Register</button>
+                </div>
+            </div>
+            <div>
+                <div class="col s12">
+                    <span class="register-link">Already registered?</span> <a href="{{ url_for('login') }}">Log In </a>
                 </div>
             </div>
         </form><!-- // form-->
